# blackshark-linux

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
crates/blackshark-client/: Cargo.toml
crates/blackshark-ctl/: Cargo.toml
crates/blackshark-ctl/src/: battery.rs  main.rs  proxy.rs
crates/blackshark-gui/: Cargo.toml
crates/blackshark-gui/src/: main.rs  pipewire.rs
crates/blackshark-gui/ui/: main.slint
crates/blackshark-tray/: Cargo.toml
crates/blackshark-tray/src/: main.rs  proxy.rs
crates/blacksharkd/: Cargo.toml
crates/blacksharkd/src/: config.rs  dbus.rs  hid_actor.rs  main.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
kernel/: ..module-common.o.cmd  .Module.symvers.cmd  .hid-blackshark.ko.cmd  .hid-blackshark.mod.cmd  .hid-blackshark.mod.o.cmd  .hid-blackshark.o.cmd  .modules.order.cmd  Makefile  hid-blackshark.c  hid-blackshark.ko  hid-blackshark.mod  hid-blackshark.mod.c  modules.order
pkg/: blackshark-gui.desktop  blackshark-tray.desktop
