[package]
name = "blackshark-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackshark-ctl"
path = "src/main.rs"

[dependencies]
blackshark-protocol = { path = "../protocol" }
blackshark-device = { path = "../device" }
hidapi = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
