[package]
name = "blacksharkd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blacksharkd"
path = "src/main.rs"

[dependencies]
blackshark-protocol = { path = "../protocol" }
blackshark-device = { path = "../device" }
anyhow = "1"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
